# app/Http/Resources/v1/Comment/IndexResource.php
@@ -1,0 +1,34 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Resources\v1\Comment;
+
+use App\Models\Comment;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use Override;
+
+/** @mixin Comment */
+final class IndexResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    #[Override]
+    public function toArray(Request $request): array
+    {
+        return [
+            'uuid' => $this->uuid,
+            'content' => $this->content,
+            'created_at' => $this->created_at->toDateTimeString(),
+            'user' => [
+                'username' => $this->user->username,
+                'first_name' => $this->user->first_name,
+                'last_name' => $this->user->last_name,
+            ],
+        ];
+    }
+}
