# app/Http/Resources/v1/Product/ShowResource.php
@@ -39,6 +39,7 @@ final class ShowResource extends JsonResource
             'images' => ShowMediaResource::collection($mediaCollection)->toArray($request),
             'rating' => $this->rating,
             'created_at' => $this->created_at->toDateTimeString(),
+            'has_comments' => $this->comments_count > 0,
         ];
     }
 
