# routes/web.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 use App\Http\Controllers\Api\v1\Categories\IndexController as CategoriesIndexController;
 use App\Http\Controllers\Api\v1\Categories\ShowController as ShowCategoryController;
+use App\Http\Controllers\Api\v1\Comments\IndexController as CommentsIndexController;
 use App\Http\Controllers\Api\v1\Products\IndexController as ProductsIndexController;
 use App\Http\Controllers\Api\v1\Products\ShowController as ShowProductController;
 use Illuminate\Support\Facades\Route;
@@ -17,6 +18,7 @@ Route::prefix('api')->group(function (): void {
         Route::prefix('/products')->group(function (): void {
             Route::get('/', ProductsIndexController::class)->name('api.v1.products.index');
             Route::get('/{slug}', ShowProductController::class)->name('api.v1.products.show');
+            Route::get('/{slug}/comments', CommentsIndexController::class)->name('api.v1.products.comments');
         });
     });
 });
